# PWDSS

./: Makefile  README.md  android_release.keystore  moc_widget.cpp  ui_widget.h
PVDSS/: .directory  PVDSS.pro  PVDSS.pro.user.2a2ad6a.4.9-pre1  PVDSS.pro.user.e6651fe  PVDSS.pro.user.eb9b414.4.8-pre1  Sol_main.html  alg  model.cpp  model_pvdss.h  widget.cpp  widget.h  widget.ui
PVDSS/android/: AndroidManifest.xml
projects_linux/PVDSS/: CMakeLists.txt  PVDSS.cpp  PVDSS.h  PVDSS.kdev4  main.cpp
projects_linux/build-PVDSS-unknown-u041fu043e u0443u043cu043eu043bu0447u0430u043du0438u044e/: CMakeCache.txt  Makefile  PVDSS.moc  PVDSS.moc_parameters  cmake_install.cmake  pvdss  pvdss.cbp
